[gd_scene load_steps=11 format=3 uid="uid://chjjubkrgfxr8"]

[ext_resource type="Texture2D" uid="uid://cmue7o4meppar" path="res://Player Sprites/Ship-Nebula - Sprite Sheet.png" id="1_f50pn"]
[ext_resource type="Script" uid="uid://bakimcqipy2cr" path="res://characterBody_P1.gd" id="1_ij6vw"]

[sub_resource type="Animation" id="Animation_ghijl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_44cfe"]
resource_name = "testing"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_ij6vw"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4epen"]
resource_name = "reviveNeed_p1"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dd465"]
_data = {
&"Death_p1": SubResource("Animation_44cfe"),
&"Idle_p1": SubResource("Animation_ij6vw"),
&"RESET": SubResource("Animation_ghijl"),
&"reviveNeed_p1": SubResource("Animation_4epen")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4epen"]
radius = 48.8147

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4epen"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3jpu"]
bg_color = Color(0.6, 1, 0.6, 1)

[node name="CharacterBodyP1" type="CharacterBody2D"]
rotation = 1.5708
scale = Vector2(2.5, 2.5)
script = ExtResource("1_ij6vw")

[node name="Sprite_p1" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_f50pn")
hframes = 12
vframes = 5

[node name="AnimationPlayer_p1" type="AnimationPlayer" parent="Sprite_p1"]
libraries = {
&"": SubResource("AnimationLibrary_dd465")
}
autoplay = "reviveNeed_p1"

[node name="CollisionShape2D_p1" type="CollisionPolygon2D" parent="."]
position = Vector2(0.399999, -1.6)
scale = Vector2(1, 1)
polygon = PackedVector2Array(-14.8, 8.4, -15.2, 3.6, -9.2, 0.400002, -4.4, -4, -3.6, -9.2, -1.2, -11.6, 2, -10, 3.2, -4.8, 6, -1.6, 9.2, 0.800001, 14, 2, 14.8, 7.2, 8.8, 9.6, 2, 10.4, 0.800002, 14.4, -2, 14.8, -3.6, 10.4, -10, 10.8)

[node name="ReviveZone" type="Area2D" parent="."]

[node name="ReviveCollision" type="CollisionShape2D" parent="ReviveZone"]
shape = SubResource("CircleShape2D_4epen")

[node name="ReviveProgressBar" type="ProgressBar" parent="ReviveZone"]
visible = false
offset_left = -19.2
offset_top = -30.8
offset_right = -15.2
offset_bottom = -3.8
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_4epen")
theme_override_styles/fill = SubResource("StyleBoxFlat_h3jpu")
fill_mode = 3
show_percentage = false

[connection signal="body_entered" from="ReviveZone" to="." method="_on_revive_zone_body_entered"]
[connection signal="body_exited" from="ReviveZone" to="." method="_on_revive_zone_body_exited"]
